--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Helvetica Neue", "Helvetica";
 }
 
-a.download {
+button.download {
     font-family: "Georgia", sans-serif;
     font-size: 25px;
     padding: 15px;
@@ -30,7 +30,7 @@ a.download {
     border: dashed 2px #5b4;
 }
 
-a.download:hover {
+button.download:hover {
     background-color: #4a3;
     border-radius: 10px;
     border: dashed 2px #5b4;
